14-kubernetes-05-Security/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-1
spec:
  selector:
    app: pod-1
  ports:
    - port: 80
      name: pod-2

---
apiVersion: v1
kind: Service
metadata:
  name: pod-2
spec:
  selector:
    app: pod-2
  ports:
    - port: 80
      name: pod-2
