14-kubernetes-05-Security/manifests/dns.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dns-traffic
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
