14-kubernetes-05-Security/manifests/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-1-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod-1
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-2-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod-2
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: pod-1
      ports:
        - protocol: TCP
          port: 80
  ingress:
    - from:
      - podSelector:
            matchLabels:
              app: pod-1
      ports:
        - protocol: TCP
          port: 80
